--- a/views/article.erb
+++ b/views/article.erb
@@ -1,13 +1,14 @@
 <% content_for :title do %>
   <%= @article.title %>-IT烟台
 <% end %>
-
+<%= erb :_header, :layout => false %>
 <article>
-  <section id="article-<%= @article.id %>">
-    <h2><a href="/articles/<%= @article.id %>"><%= @article.title %></a></h2>
+  <section id="article-<% @article.id %>">
+    <h2><%=h @article.title %></h2>
     <div class="time"><%= if @article.created_at then @article.created_at.to_datetime.strftime("%Y-%m-%d") end %></div>
     <div class="body">
       <%= if @article.content then @article.content end %>
     </div>
   </section>
 </article>
+<%= erb :_footer, :layout => false %>
