--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,20 @@
-index
+<link rel="stylesheet" href="/css/index.css">
+
+<%= erb :_header, :layout => false %>
+<div class="pure-g cover">
+  <div class="pure-u-1">
+    <h1>DxTool</h1>
+    <h2>面向小企业的互联网解决方案</h2>
+  </div>
+</div>
+
+<div class="pure-g about">
+  <div class="pure-u-1-2">
+    <h3>关于</h3>
+    <div>
+        DxTool-Team,是注提供小企业的互联网解决方案的团队,我们专注于小企业在互联网垂直方向的技术解决，包括且不限于网站，移动App，微信等方向.
+    </div>
+    <a href="/about">了解更多</a>
+  </div>
+</div>
+<%= erb :_footer, :layout => false %>
