--- a/views/article.erb
+++ b/views/article.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  <%= @article.title %>-IT烟台
+  <%= @article.title %>-
 <% end %>
 <%= erb :_header, :layout => false %>
 <article>
